updating index/contact/portfolio.html

--- a/index.html
+++ b/index.html
@@ -38,29 +38,25 @@
 			<div class="col-md-8 text-left"> 
 				<h1>About me</h1>
 				<div class="clearfix">
-					<!--<img class="ab-pic" src="assets/images/Flash_&_I.png" alt="Andrew Garzon"/>-->
 					<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				    <!-- Indicators -->
-				    <ol class="carousel-indicators">
-				      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				      <li data-target="#myCarousel" data-slide-to="1"></li>
-				      <li data-target="#myCarousel" data-slide-to="2"></li>
-				    </ol>
-
-				    <!-- Wrapper for slides -->
+				    	<ol class="carousel-indicators">
+					      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					      <li data-target="#myCarousel" data-slide-to="1"></li>
+					      <li data-target="#myCarousel" data-slide-to="2"></li>
+				   	 </ol>
 				   <div class="carousel-inner" role="listbox">
-				      <div class="item active">
-				       <img class= "c-img" src="assets/images/Flash_&_I.png" alt="Image">
-				        <div class="carousel-caption">
-				          <h3>Flash and I wearing our Broncos jerseys</h3>
-				          <p>Sadly it's been a tough season to watch.</p>
-				        </div>      
-				      </div>
+				     	 <div class="item active">
+				      	 <img class= "c-img" src="assets/images/Flash_&_I.png" alt="Image">
+					       	 <div class="carousel-caption">
+						          <h3>Flash and I wearing our Broncos jerseys</h3>
+						          <p>Sadly it's been a tough season to watch.</p>
+					        	</div>      
+				     	 	</div>
 				      <div class="item">
 				        	<img class="c-img" src="assets/images/Jenn_&_flash.jpg" alt="Image">
 				        	<div class="carousel-caption">
 				          <h3>My girlfriend, Jenn and Flash again</h3>
-				          <p>The picture was his idea... so was the pose.</p>
+				          <p>This was Flash's first road trip to Boston.</p>
 				        	</div>     
 				      </div>
 				      <div class="item">
