--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style3.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -21,8 +22,8 @@
 	 		</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-		  		<li><a href="#">About</a></li>
-		  		<li><a href="portfolio.html" target="_blank">Portfolio</a></li>
+		  		<li><a href="index.html" target="_blank">About</a></li>
+		  		<li><a href="#">Portfolio</a></li>
 		  		<li><a href="contact.html" target="_blank">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav">
@@ -36,68 +37,48 @@
   		<div class="row content">
   			<div class="col-md-2 sidenav"></div>
 			<div class="col-md-8 text-left"> 
-				<h1>About me</h1>
-				<div class="clearfix">
-					<!--<img class="ab-pic" src="assets/images/Flash_&_I.png" alt="Andrew Garzon"/>-->
-					<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				    <!-- Indicators -->
-				    <ol class="carousel-indicators">
-				      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				      <li data-target="#myCarousel" data-slide-to="1"></li>
-				      <li data-target="#myCarousel" data-slide-to="2"></li>
-				    </ol>
-
-				    <!-- Wrapper for slides -->
-				   <div class="carousel-inner" role="listbox">
-				      <div class="item active">
-				       <img class= "c-img" src="assets/images/Flash_&_I.png" alt="Image">
-				        <div class="carousel-caption">
-				          <h3>Flash and I wearing our Broncos jerseys</h3>
-				          <p>Sadly it's been a tough season to watch.</p>
-				        </div>      
-				      </div>
-				      <div class="item">
-				        	<img class="c-img" src="assets/images/Jenn_&_flash.jpg" alt="Image">
-				        	<div class="carousel-caption">
-				          <h3>My girlfriend, Jenn and Flash again</h3>
-				          <p>The picture was his idea... so was the pose.</p>
-				        	</div>     
-				      </div>
-				      <div class="item">
-				        	<img class="c-img" src="assets/images/ethan.png" alt="Image">
-				        	<div class="carousel-caption">
-				          <h3>Ethan at my company party</h3>
-				          <p>The picture was his idea... so was the pose.</p>
-				        	</div>     
-				      </div>
-				   </div>
-				   	<!-- Left and right controls -->
-				    	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-				      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				      <span class="sr-only">Previous</span>
-				    	</a>
-				   	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-				      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				      <span class="sr-only">Next</span>
-				    	</a>
-					</div>
+				<div class="col-md-12 text-center">
+					<h2>Portfolio</h2>
 					<hr>
-					<p>
-					My name is Andrew Garzon. I am currently a hardware engineer working out of the new york area. I enjoy coding, sports, hanging out with my dog, and learning. 
-					</p>
-					<p>
-					I am the oldest of 5 children and father. My son's name is Ethan and he's 5 years old. I'm also the proud owner of a Shiba Inu named Flash.
-					</p>
-					<p>	 
-					In 2013, I received my undergraduate from Rutgers University. I am currently in the Rutgers Coding Bootcamp trying to complete the course and advance my skills.
-					</p>
+					<table class="table-responsive table-condensed table-hover">
+						<tr>
+							<td>
+							<a><img src="assets/images/hangman.png" class="img-rounded"/><strong>Hangman</strong></a>
+							</td>
+							<td>
+							<a><img src="assets/images/zelda.png" class="img-rounded"/><strong>RPG Game</strong></a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+							<a><img src="assets/images/ydkj.png" class="img-rounded"/><strong>Trivia</strong></a>
+							</td>
+							<td>
+							<a><img src="assets/images/riw.png" class="img-rounded"/><strong>Rutgers Info Widget</strong></a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+							<a><img src="assets/images/rps.png" class="img-rounded"/><strong class="sb">Rock Paper Scissors</strong></a>
+							</td>
+							<td>
+							<a><img src="" class="img-rounded" alt=""/><strong></strong></a>
+							</td>
+						</tr>
+					</table>
 				</div>
 			</div>
 			<div class="col-md-2 sidenav">
 				<h3>Contact Me!</h3>
-				<p><a href="http://github.com"><img class="cm-img" src="assets/images/github.png"></a></p>
-				<p><a href="http://linkedin.com"><img class="cm-img" src="assets/images/linkedin.png"></a></p>
-				<p><a href="http://stackoverflow.com"><img class="cm-img" src="assets/images/stackoverflow.png"></a></p>
+				<p>
+				<a href="http://github.com"><img class="cm-img" src="assets/images/github.png"></a>
+				</p>
+				<p>
+				<a href="http://linkedin.com"><img class="cm-img" src="assets/images/linkedin.png"></a>
+				</p>
+				<p>
+				<a href="http://stackoverflow.com"><img class="cm-img" src="assets/images/stackoverflow.png"></a>
+				</p>
 			</div>
 	  	</div>
 	</div>
