--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 	 		</div>
   		</div>
 	</nav>
-  
 	<div class="container-fluid text-center">    
   		<div class="row content">
   			<div class="col-md-2 sidenav"></div>
@@ -67,7 +66,6 @@
 				        	</div>     
 				      </div>
 				   </div>
-				   	<!-- Left and right controls -->
 				    	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 				      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				      <span class="sr-only">Previous</span>
@@ -91,9 +89,9 @@
 			</div>
 			<div class="col-md-2 sidenav">
 				<h3>Contact Me!</h3>
-				<p><a href="http://github.com"><img class="cm-img" src="assets/images/github.png"></a></p>
-				<p><a href="http://linkedin.com"><img class="cm-img" src="assets/images/linkedin.png"></a></p>
-				<p><a href="http://stackoverflow.com"><img class="cm-img" src="assets/images/stackoverflow.png"></a></p>
+				<p><a href="http://github.com" target="_blank"><img class="cm-img" src="assets/images/github.png"></a></p>
+				<p><a href="http://linkedin.com" target="_blank"><img class="cm-img" src="assets/images/linkedin.png"></a></p>
+				<p><a href="http://stackoverflow.com" target="_blank"><img class="cm-img" src="assets/images/stackoverflow.png"></a></p>
 			</div>
 	  	</div>
 	</div>
