--- a/portfolio.html
+++ b/portfolio.html
@@ -70,15 +70,10 @@
 			</div>
 			<div class="col-md-2 sidenav">
 				<h3>Contact Me!</h3>
-				<p>
-				<a href="http://github.com" target="_blank"><img class="cm-img" src="assets/images/github.png"></a>
-				</p>
-				<p>
-				<a href="http://linkedin.com" target="_blank"><img class="cm-img" src="assets/images/linkedin.png"></a>
-				</p>
-				<p>
-				<a href="http://stackoverflow.com" target="_blank"><img class="cm-img" src="assets/images/stackoverflow.png"></a>
-				</p>
+				<hr>
+				<p><a href="http://github.com" target="_blank"><img class="cm-img" src="assets/images/github.png"></a></p>
+				<p><a href="http://linkedin.com" target="_blank"><img class="cm-img" src="assets/images/linkedin.png"></a></p>
+				<p><a href="http://stackoverflow.com" target="_blank"><img class="cm-img" src="assets/images/stackoverflow.png"></a></p>
 			</div>
 	  	</div>
 	</div>
